Update README.md files and add Javadoc comments to files in nativerl-policy